<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/UsersScanFragment"
        android:icon="@drawable/ic_baseline_connect_without_contact_24"
        android:title="Users" />

    <item
        android:id="@+id/ConversationListFragment"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="Chats" />

    <item
        android:id="@+id/SettingsFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Settings" />
</menu>
